fix the margin and the gap of the cards in css file.

--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,10 @@ body {
   display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto;
-  gap: 25px 25px;
+  gap: 10px 10px;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-bottom: 10px;
 }
 
@@ -38,7 +38,7 @@ body {
   font-size: 17px;
   display: flex;
   justify-content: center;
-  margin-top: 25px;
+  margin-top: 15px;
   
   }
   .navbar-text
